--- a/Centrality-Propagation-networkx.ipynb
+++ b/Centrality-Propagation-networkx.ipynb
@@ -133,6 +133,16 @@
     "            self.graph = nx.generators.community.LFR_benchmark_graph\n",
     "        elif path.split('.')[-1] == 'gml':\n",
     "            self.graph = nx.read_gml(path)\n",
+    "        elif path.split('.')[-1] == 'txt':\n",
+    "            Graphtype=nx.Graph()\n",
+    "            self.graph = nx.read_edgelist(path, create_using=Graphtype)\n",
+    "\n",
+    "            f = open(path, \"r\")\n",
+    "            for nodeline in f:\n",
+    "                words = nodeline.split()\n",
+    "                node = words[0]\n",
+    "                dept = words[1]\n",
+    "                self.graph.nodes[node]['value'] = dept”\n",
     "            \n",
     "        # convert nodes to integers\n",
     "        if not isinstance(list(self.graph.nodes.data())[0][0], int):\n",
